First Dev Container, Python

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,7 +5,7 @@
 
     "customizations": {
         "vscode":{
-            "extension":"ms-python.python"
+            "extensions":["ms-python.python"]
         }
     }
 }
